--- a/WorldCupStarVote/src/App.css
+++ b/WorldCupStarVote/src/App.css
@@ -59,7 +59,7 @@ html {
     .panel1 { background-image:url(http://i9.qhimg.com/t01952342d14e13e3af.jpg); }
     .panel2 { background-image:url(http://imgsports.eastday.com/sports/img/596daf4eaee21.jpeg); }
     .panel3 { background-image:url(http://img1.dongqiudi.com/fastdfs3/M00/10/2C/ChOxM1sjeT-AUaXKAAN2HIe1ptc751.jpg); }
-    .panel4 { background-image:url(http://p0.ifengimg.com/pmop/2017/0504/3BA927BAC1EDE8737581F334CA9F0FD332B1C87C_size22_w640_h360.jpeg); }
+    .panel4 { background-image:url(http://sjbz.fd.zol-img.com.cn/t_s1280x960c/g5/M00/0F/0B/ChMkJlfJQ1KISILDAAXUkS0KeowAAU75ANwKqwABdSp999.jpg); }
     .panel5 { background-image:url(https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1530124793721&di=a194fbe39150ee2393c6eab59662ddfd&imgtype=0&src=http%3A%2F%2Fc1.hoopchina.com.cn%2Fuploads%2Fstar%2Fevent%2Fimages%2F150211%2Fc54c7b8a647adcc935bc17abafafbabede1e3ba4.jpg); }
 
     /* Flex Items */
